--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     
                     <span class="wrap"></span>
                     <h2> <a class="typewrite" data-period="2000" 
-                        data-type='[ "Responsive Web Design...", "Creative Solutions...", "Agile Development...", "Remote Projects..." ]'>
+                        data-type='[ "Responsive Designs...", "eCommerce Solutions...", "Agile Development...", "Remote Projects..." ]'>
                           
                         </a>
                     </h2>
@@ -184,7 +184,7 @@
                     </div>
 
                     <div class="progress-bar">
-                        <p class="prog-title">React</p>
+                        <p class="prog-title">React.js</p>
                         <div class="progress-con">
                             <p class="prog-text">40%</p>
                             <div class="progress">
