--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/jarnokiimala1.webp" alt="Jarno Kiimala | Software Developer | Knowledge Management">
+                    <img src="img/jarnokiimala.webp" alt="Jarno Kiimala | Software Developer | Knowledge Management">
                 </div>
             </div>
             <div class="right-header">
