--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     
                     <span class="wrap"></span>
                     <h2> <a class="typewrite" data-period="2000" 
-                        data-type='[ "Responsive Designs...", "eCommerce Solutions...", "Agile Development...", "Remote Projects..." ]'>
+                        data-type='[ "• Responsive Designs", "• eCommerce Solutions", "• Agile Development", "• Remote Projects" ]'>
                           
                         </a>
                     </h2>
