--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <title>Jarno Kiimala | Front-End Development • Production Economics Engineering and Knowledge Management</title>
+    <title>Jarno Kiimala | Front-End Development • Production Economics Engineering</title>
 
     
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
