--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
                     <div class="left-contact">
                         <h4>Get Connected!</h4>
                         <p>
-                            <p style="color:var(--color-secondary)">• READY FOR NEW CHALLENGES •</p>
+                            <p style="color:var(--color-secondary)">• LOOKING FOR NEW OPPORTUNITIES •</p>
                         
                         <div class="contact-info">
                             <div class="contact-item">
@@ -1164,7 +1164,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Finland, EU Citizen • willing to relocate
+                                    Tornio - Finland, EU Citizen • willing to relocate
                                 </p>
                             </div>
                             <div class="contact-item">
