--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                     <p>
          
                     I have worked in The United States, The Netherlands, Norway, Sweden & Finland in various business 
-                    fields and I am prepared for an open minded and responsible 
-                    leadership role. I believe in lifelong learning-by-doing method.<p>
+                    fields and I am ready for diverse business tasks. I believe in lifelong learning-by-doing method.<p>
 
                     I am committed to continuous improvement principals and strive for quality and customer satisfaction.
                     My recent accomplishments are Python coding, JavaScript, Bootstrap 5, Tailwind CSS, React.js and Knowledge Management.</p>
