--- a/index.html
+++ b/index.html
@@ -805,7 +805,8 @@
                         <img src="img/nokia.webp" alt="Jarno Kiimala - NOKIA">
                         <div class="blog-text">
                             
-                            <a href="https://www.nokia.com/fi_fi/" target="_blank"><h4>
+                            <a href="https://www.nokia.com/fi_fi/" target="_blank">
+                            <h4>
                                 NOKIA
                             </h4></a>
                             <p>
@@ -1007,9 +1008,10 @@
                         
                         <img src="img/tommybartlett.webp" alt="Jarno Kiimala - USA">
                         <div class="blog-text">
+                            <a href="https://www.tommybartlett.com/show-closing/" target="_blank">
                             <h4>
                                 Tommy Bartlett Thrill Show
-                            </h4>
+                            </h4></a>
                             <p>
                                 Wisconsin-Dells, WI, U.S.A.
                             </p>
@@ -1184,7 +1186,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Tornio - Finland, EU Citizen • willing to relocate
+                                    Tornio, Finland - EU Citizen • willing to relocate
                                 </p>
                             </div>
                             <div class="contact-item">
