--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Tornio, Finland - EU Citizen • willing to relocate
+                                    Tornio, Finland - EU Citizen
                                 </p>
                             </div>
                             <div class="contact-item">
