--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                     </div>
                     <p class="tl-duration">2023 - 2024</p>
                     <h5>Software Developer<span> - Esedu</span></h5>
-                    <img src="img/esedu.webp" alt="Esedu - Jarno Kiimala - Ohjelmistokehittäjä">
+                    <img src="img/esedu2.jpg" alt="Esedu - Jarno Kiimala - Ohjelmistokehittäjä">
                     <p>
                         HTML5, CSS3, Bootstrap 5, JavaScript, Canvas API, Visual Studio Code, Git/GitHub, AI.
                     </p>
@@ -310,7 +310,7 @@
                     </div>
                     <p class="tl-duration">2023</p>
                     <h5>Python Coding<span> - Uni Helsinki</span></h5>
-                    <img src="img/unihki.webp" alt="University of Helsinki - Jarno Kiimala - Python">
+                    <img src="img/python.jpg" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
                         Introduction to Python Programming + Advanced Course
                         in Python Programming | The Department of Computer Science.
@@ -336,7 +336,7 @@
                     </div>
                     <p class="tl-duration">2021</p>
                     <h5>e-Commerce Design & Admin<span> - Faktia Ltd</span></h5>
-                    <img src="img/faktia.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
+                    <img src="img/mycashflow.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
                         MyCashflow e-Commerce Web Design, SEO and Administration.
                     </p>
@@ -347,7 +347,7 @@
                     </div>
                     <p class="tl-duration">2018</p>
                     <h5>3D Modeling Online Course<span> - SYO LTD </span></h5>
-                    <img src="img/syo.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
+                    <img src="img/3d.jpg" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
                     <p>
                         Design & Product Development | 3D models and 2D drawings of Complex Parts and Assemblies
                         Utilizing SolidWorks & Autodesk Inventor Pro.
@@ -520,7 +520,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Nonresponsive Browser Game</h3>
+                        <h3>Nonresponsive Game</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/spaceWorms" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
