--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Nonresponsive Game</h3>
+                        <h3>Non-Responsive Game</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/spaceWorms" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
