--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     </div>
                     <p class="tl-duration">2018</p>
                     <h5>3D Modeling Online Course<span> - SYO LTD </span></h5>
-                    <img src="img/3d.jpg" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
+                    <img src="img/3DCAD.jpg" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
                     <p>
                         Design & Product Development | 3D models and 2D drawings of Complex Parts and Assemblies
                         Utilizing SolidWorks & Autodesk Inventor Pro.
