--- a/index.html
+++ b/index.html
@@ -503,11 +503,11 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/votepolliisi.webp" alt="Polliisi - Jarno Kiimala -JavaScript">
+                        <img src="img/localstorage.jpg" alt="Polliisi - Jarno Kiimala -JavaScript">
 
                     </div>
                     <div class="hover-items">
-                        <h3>JavaScript Poll</h3>
+                        <h3>Local Storage</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/useCase" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
