--- a/index.html
+++ b/index.html
@@ -705,10 +705,10 @@
 
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.webp" alt="Jarno Kiimala - Thesis">
+                        <img src="img/kamacolor.webp" alt="Jarno Kiimala - Thesis">
                     </div>
                     <div class="hover-items">
-                        <h3>B.Eng Thesis</h3>
+                        <h3>KaMa - B.Eng Thesis</h3>
                         <div class="icons">
                             <a href="https://www.theseus.fi/handle/10024/134259" target="_blank" class="icon">
                                 <i class="fas fa-link"></i>
@@ -772,7 +772,7 @@
                                 GE - LNP Engineering Plastics Europe B.V.
                             </h4>
                             <p>
-                                Raamsdonksveer, The Netherlands
+                                Operator Thermocomp | Raamsdonksveer, The Netherlands
                             </p>
                             
                         </div>
@@ -785,7 +785,7 @@
                                 IMS/Acer
                             </h4>
                             <p>
-                                Tilburg, The Netherlands
+                                Electronics Tester | Tilburg, The Netherlands
                             </p>
                         </div>
                     </div>
@@ -800,7 +800,7 @@
                                 NOKIA
                             </h4></a>
                             <p>
-                                Salo, Finland
+                                Electronics Tester | Salo, Finland
                             </p>
                         </div>
                     </div>
@@ -814,7 +814,7 @@
                                 The University of Wisconsin - Madison
                             </h4></a>
                             <p>
-                                Madison, WI, U.S.A.
+                                The Wisconsin Project | Madison, WI, U.S.A.
                             </p>
                         </div>
                     </div>
@@ -829,7 +829,7 @@
                                 <a>Arctic Design Week</a>
                             </h4>
                             <p>
-                                Rovaniemi, Finland
+                                Lönnrot Project | Rovaniemi, Finland
                             </p>
                         </div>
                     </div>
@@ -870,7 +870,7 @@
                                 Hakki Design
                             </h4>
                             <p>
-                                Turku, Finland
+                                e-Commerce Project | Turku, Finland
                             </p>
                         </div>
                     </div>
@@ -883,7 +883,7 @@
                                 TravelPro Nunnu K. Oy
                             </h4>
                             <p>
-                                Helsinki, Finland
+                                SquareSpace Website Project | Helsinki, Finland
                             </p>
                         </div>
                     </div>
@@ -895,7 +895,7 @@
                                 Muutosmuotoilutoimisto
                             </h4>
                             <p>
-                                Global Online
+                                Several Remote Team Projects | Global Online
                             </p>
                         </div>
                     </div>
@@ -910,7 +910,7 @@
                                 <a>Skábmagovat Indigenous Film Festival</a>
                             </h4>
                             <p>
-                                Aanaar - Inari, Finland
+                                Video Shoot Project | Aanaar - Inari, Finland
                             </p>
                         </div>
                     </div>
@@ -923,7 +923,7 @@
                                 Unna Junná | TV | Areena | yle.fi
                             </h4>
                             <p>
-                                Inari, Finland
+                                Rock Bohccot - 2D animation Project | Inari, Finland
                             </p>
                         </div>
                     </div>
@@ -936,7 +936,7 @@
                                 Yle Sápmi
                             </h4>
                             <p>
-                                Inari, Finland
+                                Sound Monitoring Project | Inari, Finland
                             </p>
                         </div>
                     </div>
@@ -989,7 +989,7 @@
                                 Houlihan´s Wisconsin-Dells
                             </h4></a>
                             <p>
-                                Wisconsin-Dells, WI, U.S.A.
+                                Line Cook | Wisconsin-Dells, WI, U.S.A.
                             </p>
                         </div>
                     </div>
