--- a/index.html
+++ b/index.html
@@ -393,10 +393,10 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!-- <p class="tl-duration">2007 - 2008</p> -->
-                    <h5>Media Technology Engineer<span> - Centria University of Applied Sciences</span></h5>
+                    <h5>Media Engineering & Technology<span> - Centria University of Applied Sciences</span></h5>
                     <img src="img/centria.webp" alt="Centria University of Applied Sciences - Jarno Kiimala - Media Tech Engineering">
                     <p>
-                        Media Technology & Engineering.
+                        Media Engineering & Technology.
                     </p>
                 </div>
                 
@@ -854,7 +854,7 @@
                                 <a>Arctic Design Week</a>
                             </h4>
                             <p>
-                                Lönnrot Project | Rovaniemi, Finland
+                                Lönnrot Project - 1000 Tales from Finland | Rovaniemi, Finland
                             </p>
                         </div>
                     </div>
@@ -867,7 +867,7 @@
                                 The Committee for the Future, Parliament of Finland
                             </h4>
                             <p>
-                                Helsinki, Finland
+                                The Wisconsin Project | Helsinki, Finland
                             </p>
                         </div>
                     </div>
@@ -880,7 +880,7 @@
                                 Tamora Oy
                             </h4>
                             <p>
-                                Helsinki, Finland
+                                Change Design Project | Helsinki, Finland
                             </p>
                         </div>
                     </div>
@@ -920,7 +920,7 @@
                                 Muutosmuotoilutoimisto
                             </h4>
                             <p>
-                                Several Remote Team Projects | Global Online
+                                Several Remote Team Projects adding Value to Customers | Global Online
                             </p>
                         </div>
                     </div>
@@ -987,7 +987,7 @@
                                 Rouhea Oy
                             </h4>
                             <p>
-                                Oulu, Finland
+                                Creative Business in Lapland Project | Oulu, Finland
                             </p>
                         </div>
                     </div>
@@ -1000,7 +1000,7 @@
                                 Faros & Com Oy
                             </h4>
                             <p>
-                                Espoo, Finland
+                                Creative Business in Lapland Project | Espoo, Finland
                             </p>
                         </div>
                     </div>
@@ -1013,7 +1013,7 @@
                                 The League of Finnish American Societies
                             </h4>
                             <p>
-                                Helsinki, Finland
+                                The Wisconsin Project | Helsinki, Finland
                             </p>
                         </div>
                     </div>
@@ -1056,7 +1056,7 @@
                                 Puijo Restaurants
                             </h4>
                             <p>
-                                Kuopio, Finland
+                                Hotel and Restaurant Management Project | Kuopio, Finland
                             </p>
                         </div>
                     </div>
@@ -1069,7 +1069,7 @@
                                 Hotel Savonia
                             </h4>
                             <p>
-                                Kuopio, Finland
+                                Hotel and Restaurant Management Project | Kuopio, Finland
                             </p>
                         </div>
                     </div>
@@ -1082,7 +1082,7 @@
                                 Hotel Nuuksio
                             </h4>
                             <p>
-                                Espoo, Finland
+                                Digital Marketing Project | Espoo, Finland
                             </p>
                         </div>
                     </div>
