--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     </div>
 
                     <div class="progress-bar">
-                        <p class="prog-title">ChatGPT</p>
+                        <p class="prog-title">Artificial Intelligence</p>
                         <div class="progress-con">
                             <p class="prog-text">85%</p>
                             <div class="progress">
@@ -1056,7 +1056,7 @@
                                 Puijo Restaurants
                             </h4>
                             <p>
-                                Hotel and Restaurant Management Project | Kuopio, Finland
+                                Hotel and Restaurant Management Projects | Kuopio, Finland
                             </p>
                         </div>
                     </div>
@@ -1069,7 +1069,7 @@
                                 Hotel Savonia
                             </h4>
                             <p>
-                                Hotel and Restaurant Management Project | Kuopio, Finland
+                                Hotel and Restaurant Management Projects | Kuopio, Finland
                             </p>
                         </div>
                     </div>
@@ -1082,11 +1082,11 @@
                                 Hotel Nuuksio
                             </h4>
                             <p>
-                                Digital Marketing Project | Espoo, Finland
+                                Digital Marketing Plan Project | Espoo, Finland
                             </p>
                         </div>
                     </div>
-<!--
+
                     <div class="blog">
                         <img src="img/sogsakk.webp" alt="">
                         <div class="blog-text">
@@ -1094,11 +1094,11 @@
                                 Sogsakk
                             </h4>
                             <p>
-                                Inari, Finland
+                                Multimedia Projects | Inari, Finland
                             </p>
                         </div>
                     </div>
-
+<!--
                     <div class="blog">
                         <img src="img/utbnord.webp" alt="">
                         <div class="blog-text">
@@ -1110,7 +1110,7 @@
                             </p>
                         </div>
                     </div>
-
+                -->
                     <div class="blog">
                         
                         <img src="img/salmar.webp" alt="">
@@ -1119,10 +1119,11 @@
                                 Salmar ASA
                             </h4>
                             <p>
-                                Frøya, Norway
+                                Fiskeproduksjon | Frøya, Norway
                             </p>
                         </div>
                     </div>
+<!--
                     <div class="blog">
                         
                         <img src="img/portt3.webp" alt="">
