--- a/index.html
+++ b/index.html
@@ -127,19 +127,21 @@
                     <div class="carousel-container" id="carouselContainer" role="list">
                         <div class="carousel-item" role="listitem"><img src="img/html.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/css.jpg">
-                        <div class="carousel-item" role="listitem"><img src="img/boot.jpg">
-                        <div class="carousel-item" role="listitem"><img src="img/JS.jpg">
+                        <div class="carousel-item" role="listitem"><img src="img/javascript.jpg">
+                        <div class="carousel-item" role="listitem"><img src="img/bootstrap.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/pythonlogo.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/reactlogo.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/tailwind.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/visualstudio.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/github.jpg">
+                        <div class="carousel-item" role="listitem"><img src="img/trello.jpg">
+                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/solikkalogo.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/inventor.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/adobelogo.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/officelogo.jpg">
                         <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.jpg">
-                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div>
+                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div>
             </div>
 
