--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                     
                     <h4>About me</h4>
                     <p>
-                    Experienced web designer & front-end developer. I have carried out cross-functional remote projects e.g. 
+                    Software Developer & Industrial Management Engineer. I have carried out cross-functional remote projects e.g. 
                     (e-commerce, productization, marketing research, networking, web design/development) with
                     operational efficiency, sustainability and corporate responsibility in mind.
                     <p>
          
                     I have worked in The United States, The Netherlands, Norway, Sweden & Finland in various business 
-                    fields and I am ready for diverse business tasks. I believe in lifelong learning-by-doing method.<p>
+                    fields and I am a multi-skilled and dynamic team player. I believe in lifelong learning-by-doing method.<p>
 
                     I am committed to continuous improvement principals and strive for quality and customer satisfaction.
                     My recent accomplishments are Python coding, JavaScript, Bootstrap 5, Tailwind CSS, React.js and Knowledge Management.</p>
