--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Non-Responsive Game</h3>
+                        <h3>Browser Game</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/spaceWorms" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
@@ -738,7 +738,7 @@
                                 Tamora Oy
                             </h4>
                             <p>
-                                Change Design Project | Helsinki, Finland
+                                Change Design Projects | Helsinki, Finland
                             </p>
                         </div>
                     </div>
@@ -806,7 +806,7 @@
                                 <a>Ijahis Idja Music Festival</a>
                             </h4>
                             <p>
-                                Video Shoot Project | Aanaar - Inari, Finland
+                                Video Shoot & Edit Project | Aanaar - Inari, Finland
                             </p>
                         </div>
                     </div>
