--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     operational efficiency, sustainability and corporate responsibility in mind.
                     <p>
                     
-                    I bring an optimistic, can-do approach to all of the tasks and responsibilities and motivate the people around me to do their
+                    I bring an optimistic, can-do approach to all of the tasks and responsibilities. I motivate the people around me to do their
                     best and help move projects forwards when setbacks occur or challenges are faced.<p>
                     
                     I have worked in The United States, The Netherlands, Norway, Sweden & Finland in various business 
