--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>AI Made World Clock</h3>
+                        <h3>AI Built World Clock</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/world-clock-app/" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
