--- a/index.html
+++ b/index.html
@@ -316,11 +316,11 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/worldClock.jpg" alt="World Clock - Jarno Kiimala - JavaScript">
+                        <img src="img/aiClock2.jpg" alt="World Clock - Jarno Kiimala - JavaScript">
 
                     </div>
                     <div class="hover-items">
-                        <h3>AI Built World Clock</h3>
+                        <h3>Llama Coder | ChatGPT</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/world-clock-app/" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
