--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
                                 Utbildning Nord
                             </h4>
                             <p>
-                                Övertorneå, Sweden
+                                Digital and Print Media Projects | Övertorneå, Sweden
                             </p>
                         </div>
                     </div>
