--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <title>Jarno Kiimala | Front-End Development • Industrial Engineering and Management</title>
+    <title>Jarno Kiimala | Transforming Ideas into Interactive Realities</title>
 
     
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
