--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     </div>
                     <!-- <p class="tl-duration">2023</p> -->
                     <h5>Python Coding<span> - Uni Helsinki</span></h5>
-                    <img src="img/python.jpg" alt="University of Helsinki - Jarno Kiimala - Python">
+                    <img src="img/unihki.webp" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
                         Introduction to Python Programming + Advanced Course
                         in Python Programming | The Department of Computer Science.
