--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                     Businesses and Organizations I have partnered and collaborated with.
                 </p>
 
-               <button onclick="topFunction()" id="myBtn"><i class="fa-solid fa-arrow-up"></i></button>
+               <!-- <button onclick="topFunction()" id="myBtn"><i class="fa-solid fa-arrow-up"></i></button> -->
                 
 
                 <div class="blogs">  
