--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                     Businesses and Organizations I have partnered and collaborated with.
                 </p> -->
 
-               <h4 class="stat-title">IN Businessess and Organizations</h4>
+               <h4 class="stat-title">Businesses and Organizations</h4>
                 
 
                 <div class="blogs">  
