--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </div>
 
             
-            <h4 class="stat-title">Education</h4>
+            <h4 class="stat-title">DEGREES & Continuing Education</h4>
 
             
             <div class="timeline">
