--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="header-content">
             <div class="left-header">
                 <div class="h-shape"></div>
-                <div class="image">
+                <div class="image" id="image">
                     <img src="img/jarnokiimala.webp" alt="Jarno Kiimala | Software Developer | Knowledge Management">
                 </div>
             </div>
@@ -1046,7 +1046,45 @@
                                 The Finnish Road Administration, VALID:05/2029
                             </p>
                         </div>
-                    </div></div>
+                    </div>
+                    
+                    <div class="blog">
+                        <img src="img/hotwork.webp" alt="Jarno Kiimala - Hot Work Certificate">
+                        <div class="blog-text">
+                            <h4>
+                                Hot Work Certificate
+                            </h4>
+                            <p>
+                                The Finnish National Rescue Association, VALID:EXPIRED
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/firstaid.webp" alt="Jarno Kiimala - Basic First Aid Course">
+                        <div class="blog-text">
+                            <h4>
+                                Basic First Aid Course
+                            </h4>
+                            <p>
+                                SPR - The Finnish Red Cross, VALID:EXPIRED
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/ssgentre.webp" alt="Jarno Kiimala - SSG Entre">
+                        <div class="blog-text">
+                            <h4>
+                                SSG Entre -  Work Environment and Safety Course
+                            </h4>
+                            <p>
+                                SSG Standard Solutions Group AB, VALID:EXPIRED
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
 
                 </div> 
             </div> 
