--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 Coding and Other (Remote Team) Projects.
             </p>   -->
 
-            <h4 class="stat-title">Programming + others</h4>
+            <h4 class="stat-title">Programming & Engineering</h4>
 
             <div class="portfolios">
 
@@ -1008,7 +1008,7 @@
                     <div class="main-title">
                         <h2><i class="fa-solid fa-user-shield"></i> <span>SAFETY</span></h2>
                     </div>
-                    <h4 class="stat-title">Occupational Safety Cards</h4>
+                    <h4 class="stat-title">Occupational Safety Training</h4>
                     <div class="blogs">  
                     
                         
