--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
         </section>
 
         <section class="container" id="blogs">
-            
+            <element onclick="scrollToSection('blogs'); return false;">
             <div class="blogs-content">
                 <div class="main-title">
                     <h2><i class="fa-solid fa-person-digging"></i>EX<span>perience</span></h2>
