--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     </div>
                     <!-- <p class="tl-duration">2021</p> -->
                     <h5>e-Commerce Design & Admin<span> - Faktia Ltd</span></h5>
-                    <img src="img/mycashflow.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
+                    <img src="img/mycashflowI.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
                         MyCashflow e-Commerce Web Design, SEO and Administration.
                     </p>
@@ -638,7 +638,7 @@
                 </div>
 
           
-               <h4 class="stat-title">Businesses and Organizations</h4>
+               <h4 class="stat-title">Business Collaboration and Partnerships</h4>
                 
 
                 <div class="blogs">  
