--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@
         <div class="control" data-id="portfolio">
             <i class="fas fa-code"></i>
         </div>
-        <div class="control" data-id="blogs">
+        <div class="control" data-id="blogs" onclick="navigateToBlogs(event)">
             <i class="fa-solid fa-person-digging"></i>
         </div>
         <div class="control" data-id="contact">
