--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
                 <div class="main-title">
 
                     
-                    <h2>Contact Me<br><span><i class="fa fa-info-circle fa-xl" aria-hidden="true"></i></span><span class="bg-text"></span></h2>
+                    <h2>Contact Me<br><br><span><i class="fa fa-info-circle fa-xl" aria-hidden="true"></i></span><span class="bg-text"></span></h2>
                 </div>
 
 
