--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     
                 <p>
                     3D modeling • Knowledge Management
-                     • Problem Solving Content Creation • AI 
+                     • Content Creation • AI 
                 </p>
 
             </div>
@@ -964,7 +964,7 @@
                     </div><br>&nbsp;
 
                     <div class="main-title">
-                        <h2><i class="fa-solid fa-user-shield"></i> <span>SAFETY</span></h2>
+                        <h2><i class="fa-solid fa-user-shield"></i> <span>Health</span> & SAFETY</h2>
                     </div>
                     <h4 class="stat-title">Occupational Safety Training</h4>
                     <div class="blogs">  
