--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     
                 <p>
                     3D modeling • Knowledge Management
-                     • Content Creation • AI 
+                     • Content Creation • AI • Solution Selling
                 </p>
 
             </div>
