--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!-- <p class="tl-duration">2007 - 2008</p> -->
-                    <h5>Multi Media Engineering and Technology<span> - Centria University of Applied Sciences</span></h5>
+                    <h5>Multimedia Engineering and Technology<span> - Centria University of Applied Sciences</span></h5>
                     <img src="img/centria.webp" alt="Centria University of Applied Sciences - Jarno Kiimala - Media Tech Engineering">
                     <p>
-                        Multi Media Engineering & Technology.
+                        Multimedia Engineering & Technology.
                     </p>
                 </div>
                 
