--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <h5>e-Commerce Design & Admin<span> - Faktia Ltd</span></h5>
                     <img src="img/myCashFlowI.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
-                        MyCashflow e-Commerce Web Design, SEO and Administration.
+                        MyCashflow e-Commerce Web Design, Products, Payment Methods, Logistics, Marketing, SEO and Administration.
                     </p>
                 </div>
 
@@ -166,7 +166,7 @@
                     <h5>e-Commerce Design & Admin<span> - Avartum Institute</span></h5>
                     <img src="img/woocommerce.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
-                        WordPress & WooCommerce Web Design, SEO and Administration.
+                        WordPress & WooCommerce Web Design, Products, Payment Methods, Logistics, Marketing, SEO and Administration.
                     </p>
                 </div>
 
