--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="carousel-container" id="carouselContainer" role="list">
                         <div class="carousel-item" role="listitem"><img src="img/html.webp" alt="html">
                         <div class="carousel-item" role="listitem"><img src="img/css.webp" alt="CSS">
-                        <div class="carousel-item" role="listitem"><img src="img/javascript.webp" alt="JavaScript">
+                        <div class="carousel-item" role="listitem"><img src="img/JS.webp" alt="JavaScript">
                         <div class="carousel-item" role="listitem"><img src="img/bootstrap.webp" alt="bootstrap">
                         <div class="carousel-item" role="listitem"><img src="img/pythonlogo.webp" alt="python">
                         <div class="carousel-item" role="listitem"><img src="img/reactlogo.webp" alt="react">
