--- a/index.html
+++ b/index.html
@@ -38,15 +38,19 @@
                 <h1 class="name">
                      I am <span>Jarno Kiimala. </span>Front-End Web Developer & Engineer.</span></h1><br>
                     
-                    <span class="wrap"></span>
-                    <h2> <a class="typewrite" data-period="2000" 
-                        data-type='[ "• Responsive Coding •", "• eCommerce Solutions •", "• 2D Animations •", "• Remote Projects •", "• WordPress Sites •" ]'> 
-                        </a>
-                    </h2>
+                     <div class="scene">
+                        <div class="cube">
+                          <div class="face front">3D Modeling</div>
+                          <div class="face back">Motion Graphics</div>
+                          <div class="face left">Artificial Intelligence</div>
+                          <div class="face right">Content Creation</div>
+                          <div class="face top">2D Animations</div>
+                          <div class="face bottom">Storytelling</div>
+                        </div>
+                      </div>
                     
                 <p>
-                    3D modeling • Knowledge Management
-                     • Content Creation • AI • Solution Selling
+                    Transforming Ideas into Interactive Realities & Utilizing Artificial Intelligence.
                 </p>
 
             </div>
