--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
                         <div class="carousel-item" role="listitem"><img src="img/solikkalogo.webp" alt="solidworks">
                         <div class="carousel-item" role="listitem"><img src="img/inventorlogo.webp" alt="inventor">
                         <div class="carousel-item" role="listitem"><img src="img/adobelogo.webp" alt="adobe">
+                        <div class="carousel-item" role="listitem"><img src="img/canva.webp" alt="adobe">
                         <div class="carousel-item" role="listitem"><img src="img/officelogo.webp" alt="office">
                         <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
-                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
+                    </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div>
                 </div></div>
 
