--- a/index.html
+++ b/index.html
@@ -39,18 +39,11 @@
                      I am <span>Jarno Kiimala. </span>Front-End Web Developer & Engineer.</span></h1><br>
                     
                      <div class="scene">
-                        <div class="cube">
-                          <div class="face front">3D Modeling</div>
-                          <div class="face back">Motion Graphics</div>
-                          <div class="face left">Artificial Intelligence</div>
-                          <div class="face right">Content Creation</div>
-                          <div class="face top">2D Animations</div>
-                          <div class="face bottom">Storytelling</div>
-                        </div>
+                        <div class="text" id="animatedText">3D Modeling</div>
                       </div>
                     
                 <p>
-                    Transforming Ideas into Interactive Realities & Utilizing Artificial Intelligence.
+                    Transforming Ideas into Interactive Realities - Utilizing Artificial Intelligence.
                 </p>
 
             </div>
