--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       </div>
                     
                 <p>
-                    Transforming Ideas into Interactive Realities - Utilizing Artificial Intelligence.
+                    Transforming Ideas into Interactive Realities.
                 </p>
 
             </div>
