--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                                 Houlihan´s Wisconsin-Dells
                             </h4></a>
                             <p>
-                                Line Cook | Wisconsin-Dells, WI, U.S.A.
+                                Line Cook Project | Wisconsin-Dells, WI, U.S.A.
                             </p>
                         </div>
                     </div>
@@ -775,7 +775,7 @@
                                 Muutosmuotoilutoimisto
                             </h4>
                             <p>
-                                Several Remote Team Projects adding Value to Customers | Global Online
+                                Several Remote Team Projects - Adding Value to Customers | Global Online
                             </p>
                         </div>
                     </div>
@@ -926,7 +926,7 @@
                                 Salmar ASA
                             </h4>
                             <p>
-                                Fiskeproduksjons Project | Frøya, Norway
+                                Fiskeproduksjons Project | Frøya, Norge
                             </p>
                         </div>
                     </div>
@@ -942,7 +942,7 @@
                                 Tälje Trädgårdsprodukter AB
                             </h4>
                             <p>
-                                Logistics Project | Södertälje, Sweden
+                                Logistics Project | Södertälje, Sverige
                             </p>
                         </div>
                     </div> 
