--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!-- <p class="tl-duration">2023</p> -->
-                    <h5>Lean Six Sigma<span> - The Massachusetts Institute of Technology (MIT) </span></h5>
+                    <h5>Lean Academy<span> - The Massachusetts Institute of Technology (MIT) </span></h5>
                     <img src="img/MIT.webp" alt="The Massachusetts Institute of Technology (MIT) - Jarno Kiimala - Lean Six Sigma">
                     <p>
                         Introduction to Lean Six Sigma Methods.
@@ -243,7 +243,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!-- <p class="tl-duration">2007 - 2008</p> -->
-                    <h5>Multimedia Engineering and Technology<span> - Centria University of Applied Sciences</span></h5>
+                    <h5>Media Engineering and Technology<span> - Centria University of Applied Sciences</span></h5>
                     <img src="img/centria.webp" alt="Centria University of Applied Sciences - Jarno Kiimala - Media Tech Engineering">
                     <p>
                         Multimedia Engineering & Technology.
