--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                                 IMS/Acer
                             </h4>
                             <p>
-                                Testing Process of IBM & Acer Products | Tilburg, The Netherlands
+                                Testing Process Operations of IBM & Acer Products | Tilburg, The Netherlands
                             </p>
                         </div>
                     </div>
@@ -1179,11 +1179,11 @@
         <div class="control" data-id="about">
             <i class="fa-solid fa-user-graduate"></i>
         </div>
-        <div class="control" data-id="portfolio">
-            <i class="fas fa-code"></i>
-        </div>
         <div class="control" data-id="blogs" onclick="navigateToBlogs(event)">
             <i class="fa-solid fa-person-digging"></i>
+        </div>
+        <div class="control" data-id="portfolio">
+            <i class="fas fa-code"></i>
         </div>
         <div class="control" data-id="contact">
             <i class='far fa-address-card'></i>
