--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!-- <p class="tl-duration">2023</p> -->
-                    <h5>Lean 6 SIGMA Academy<span> - The Massachusetts Institute of Technology (MIT) Cambridge, MA</span></h5>
+                    <h5>The LAI Lean Academy<span> - The Massachusetts Institute of Technology (MIT) Cambridge, MA</span></h5>
                     <img src="img/MIT.webp" alt="The Massachusetts Institute of Technology (MIT) - Jarno Kiimala - Lean Six Sigma">
                     <p>
                         Introduction to Lean Six Sigma Methods.
